# simulation

./: README.md
common_msgs/: CMakeLists.txt  package.xml
common_msgs/msg/: CmdMsg.msg  PlanMsg.msg  TaskMsg.msg
kejia_simulator/kejia_description/: CMakeLists.txt  package.xml
kejia_simulator/kejia_description/urdf/: kejia.urdf.xacro  kejia.xacro  kejia_arm.xacro  kejia_body.xacro  kejia_chassis.xacro  kejia_ev.xacro  kejia_plugins.xacro  kejia_support.xacro  kinect.xacro  transmission.xacro  wheel.xacro  wheel_back.xacro
kejia_simulator/kejia_gazebo/: CMakeLists.txt  package.xml
kejia_simulator/kejia_gazebo/controller/: controller.yaml  controller_kejia.yaml
kejia_simulator/kejia_gazebo/launch/: kejia.launch  kejia_gpsr.launch
kejia_simulator/kejia_gazebo/worlds/: gpsr.world
kejia_simulator/kejia_mapping/: CMakeLists.txt  README.md  package.xml
kejia_simulator/kejia_mapping/launch/: gmapping.launch  localization_lidar_2d.launch  slam_lidar_2d.launch
kejia_simulator/kejia_mapping/map/: WEMapEditor.ini  gpsr.txt  gpsr.yaml  map2pgm  pgm2map  we_map_editor
kejia_simulator/kejia_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kejia_simulator/kejia_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kejia.srdf  (+2 more)
kejia_simulator/kejia_nav/: CMakeLists.txt  README.md  package.xml
kejia_simulator/kejia_stage/: CMakeLists.txt  README.md  package.xml
kejia_simulator/we_python_sm/: CMakeLists.txt  package.xml
planner_example/: CMakeLists.txt  package.xml
planner_example/scripts/: plan.py  planner.py  solver.py
(+243 files in other folders)
